[package]
name = "net2"
version = "0.2.39"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/deprecrated/net2-rs"
homepage = "https://github.com/deprecrated/net2-rs"
documentation = "https://docs.rs/net2/~0.2"
description = """
Extensions to the standard library's networking types as proposed in RFC 1158.
"""
include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "src/**/*.rs"
]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["handleapi", "winsock2", "ws2def", "ws2ipdef", "ws2tcpip"] }

[target.'cfg(any(unix, target_os="wasi"))'.dependencies]
libc = "0.2.139"

[dependencies]
cfg-if = "0.1"

[features]
nightly = []
duration = []
default = ["duration"]
